<resources>
    <string name="app_name">EditVideo</string>
    <string name="menu_cut_video">Cut Video</string>
    <string name="menu_extract_images">Extract Images</string>
    <string name="menu_extract_audio">Extract Audio</string>
    <string name="menu_reverse_video">Reverse Video</string>
    <string name="menu_convert_to_gif">Convert to Gif</string>
    <string name="menu_remove_audio">Remove audio</string>
    <string name="empty_video_msg">Empty video, please upload a video to edit</string>
    <string name="upload_video">Upload video</string>
    <string name="done">Done</string>
    <string name="empty_media">Empty media</string>

    <string name="title_media_video">Select videos</string>
    <string name="title_media_image">Select images</string>
    <string name="title_media_audio">Select audios</string>

    <string name="video_selected">1 video selected</string>
    <string name="image_selected">1 image selected</string>
    <string name="audio_selected">1 audio selected</string>
    <string name="videos_selected">%1d videos selected</string>
    <string name="images_selected">%1d images selected</string>
    <string name="audios_selected">%1d audios selected</string>


    <string name="result">Result</string>


    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_msg_delete_title">Delete file?</string>
    <string name="dialog_msg_delete_project">Are you sure you want to delete this file?</string>


    <string name="dialog_ok">OK</string>
    <string name="dialog_cut_video_title">Message</string>
    <string name="dialog_cut_video_description">Please change the start and end time by changing seekbar!</string>


    <string name="empty_file_msg">Please upload a video first!</string>

    <string name="external_permission_denied">Storage permission is denied. This permission is required to use this feature</string>
    <string name="load_image_error_msg">Some errors occur. Can\'t load image!</string>
    <string name="extract_image_title">Extract image result</string>
    <string name="extract_audio_title">Extract audio result</string>
    <string name="edit_file_name_title">Edit file name</string>
    <string name="file_name">File name</string>
    <string name="save">Save</string>
    <string name="edit_file_name_empty">Please input file name!</string>
    <string name="edit_file_name_error">Can\'t update file name, please check again!</string>
    <string name="edit_file_name_no_change">Nothing change!</string>
    <string name="menu_merge_image">Merge images to video</string>
    <string name="menu_merge_video">Merge videos</string>
    <string name="menu_merge_img_video">Merge images videos</string>
    <string name="menu_merge_audios">Merge audios</string>
    <string name="menu_trim_audio">Trim audio</string>
    <string name="select_images">Select images</string>
    <string name="select_audio">Select audio</string>
    <string name="merge">Merge</string>

    <string name="select_image_empty">Please select image!</string>
    <string name="empty_second_error">Please input second!</string>
    <string name="second_per_image">Second per image:</string>
    <string name="second_per_image_des">(Second per image must be greater than 1 and smaller than 20)</string>

    <string name="merge_image_result">Merge images result</string>

    <string name="max_selected_count_error">Max selected item is %1d</string>
    <string name="empty_audio_error">Please select audio file!</string>
    <string name="please_upload_videos">Please upload videos</string>
    <string name="remove_audio_of_video">Remove audio of video</string>
    <string name="second_per_video">Second per video</string>
    <string name="upload_audio_file">Upload audio file</string>
    <string name="add_filter_for_image">Add Filter for image</string>


    <string name="image_filter_0">No Filter</string>
    <string name="image_filter_1">Filter 1</string>
    <string name="image_filter_2">Filter 2</string>
    <string name="image_filter_3">Filter 3</string>
    <string name="image_filter_4">Filter 4</string>
    <string name="image_filter_5">Filter 5</string>
    <string name="image_filter_6">Filter 6</string>
    <string name="image_filter_7">Filter 7</string>
    <string name="image_filter_8">Filter 8</string>


    <string name="pick_place_type">Select Place Type</string>

    <string-array name="place_types">
        <item>Restaurant jkjasd kakdf kakjsdf jkadhsf akushdf adfhkuasfk af iudfiu</item>
        <item>Cafe</item>
        <item>Gas Stations</item>
        <item>Shopping</item>
        <item>Hotels</item>
        <item>Airport</item>
        <item>Transit Stations</item>
        <item>Banks</item>
        <item>School</item>
        <item>Church</item>
    </string-array>
</resources>