<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMergeImages"
        android:title="@string/menu_merge_image"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuMergeVideos"
        android:title="@string/menu_merge_video"
        app:showAsAction="never"/>
    <item
        android:visible="false"
        android:id="@+id/menuMergeImageVideo"
        android:title="@string/menu_merge_img_video"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuMergeAudio"
        android:title="@string/menu_merge_audios"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuTrimAudio"
        android:title="@string/menu_trim_audio"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuAddImageFilter"
        android:title="@string/add_filter_for_image"
        app:showAsAction="never"/>
</menu>