<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_dialog">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="16dp"
                android:text="@string/edit_file_name_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/file_name"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:padding="16dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFileName">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/Theme.EditVideo.DialogButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/dialog_cancel" />

                <View
                    android:id="@+id/viewCenterButton"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/Theme.EditVideo.DialogButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/save"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/viewLineTopButton"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toTopOf="@id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
