<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <TextView
            android:id="@+id/tvAudioPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/rangeSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.9"
            tools:text="AudioPath" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupAudio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="tvAudioPath, btnTrimAudio, rangeSlider, tvDurationEnd, tvDurationStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTrimAudio"
            style="@style/Theme.EditVideo.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/menu_trim_audio"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/glBtnUpload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/glBtnUpload"
            app:layout_constraintWidth_percent="0.8"
            tools:visibility="visible" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_video"
            android:theme="@style/Theme.RangeSlider"
            android:valueFrom="0.0"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glCenterHor"
            app:layout_constraintWidth_percent="0.9"
            app:thumbColor="@color/black"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvDurationEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/rangeSlider"
            app:layout_constraintTop_toBottomOf="@id/rangeSlider"
            tools:text="00:10" />

        <TextView
            android:id="@+id/tvDurationStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/rangeSlider"
            app:layout_constraintTop_toBottomOf="@id/rangeSlider"
            tools:text="00:00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCenterHor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUploadAudio"
            style="@style/Theme.EditVideo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/upload_audio_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDurationEnd" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBtnUpload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>